# admin-service

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  manage.py  pyproject.toml
admin_service/: asgi.py  errors.py  manage.py  settings.py  urls.py  wsgi.py
admin_service/admin_service/: asgi.py  settings.py  urls.py  wsgi.py
admin_service/services/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
admin_service/services/api/: urls.py  views.py
admin_service/services/migrations/: 0001_initial.py  0002_remove_service_service_group_and_more.py
admin_service/services/templates/: 404.html  base.html
admin_service/services/templates/services/: generic_confirm_delete.html  generic_form.html  generic_list.html
admin_service/services/templatetags/: custom_filters.py
admin_service/services/web/: urls.py  views.py
admin_service/templates/: 404.html
admin_service/templates/account/: admin_login.html  login.html
admin_service/templates/services/: base.html  generic_confirm_delete.html  generic_form.html  generic_list.html
admin_service/templates/socialaccount/snippets/: login.html  provider_list.html
admin_service/templatetags/: custom_filters.py
services/: admin.py  models.py  serializers.py  tests.py  urls.py
services/api/: urls.py  views.py
services/migrations/: 0001_initial.py  0002_remove_service_service_group_and_more.py
services/templates/: base.html
services/templates/registration/: login.html
services/templates/services/: generic_confirm_delete.html  generic_form.html  generic_list.html
services/templatetags/: custom_filters.py
services/views/: __init__.py  service.py  service_group.py  service_note.py  service_type.py
services/views/generics/: __init__.py  base.py  object_views.py
services/web/: urls.py  views.py
