[tool.poetry]
name = "admin_service"
version = "0.1.0"
description = "A django app for arranging and managing church events"
authors = ["Schwannden Kuo <schwannden@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
markdown = "^3.6"
django-allauth = "^64.1.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
requests-oauthlib = "^2.0.0"
requests = "^2.32.3"
python3-openid = "^3.2.0"
cryptography = "^43.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
django-stubs = "^5.0.4"
djangorestframework-stubs = "^3.15.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "admin_service.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
